[MOBILE] fix word break on 'latest work'

--- a/assets/css/front/responsive/480.styl
+++ b/assets/css/front/responsive/480.styl
@@ -7,6 +7,10 @@
 .hw-responsive-linebreak
   display block
 
+.hw-word-break
+  display inline
+  white-space nowrap
+
 // Mobile Portrait Size to Mobile Landscape Size (devices and browsers)
 @media only screen and (max-width: 479px)
   if debug()
